--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "go-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://escape-char.github.io/react-go",
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -47,7 +48,10 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+     "predeploy": "npm run build",
+     "deploy": "gh-pages -d build"
+
   },
   "jest": {
     "collectCoverageFrom": [
@@ -92,6 +96,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6"
   }
